<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

    <!-- Layout for the editor -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <ImageView
            android:id="@+id/product_picture"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/no_image"/>

        <!-- Overview category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name Label -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/EditorTextStyle"
                    android:text="@string/textview_name" />

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_product_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_name"
                    android:inputType="textCapWords" />

            </LinearLayout>

            <!-- Price Label -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/EditorTextStyle"
                    android:text="@string/textview_price" />

                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_product_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_price"
                    android:inputType="number" />
            </LinearLayout>

            <!-- Quantity Label -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/EditorTextStyle"
                    android:text="@string/textview_quantity" />

                <!-- Quantity field -->
                <EditText
                    android:id="@+id/edit_product_quantity"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_quantity"
                    android:inputType="number" />
            </LinearLayout>

            <!-- Supplier Label -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/EditorTextStyle"
                    android:text="@string/textview_supplier" />

                <!-- Supplier field -->
                <EditText
                    android:id="@+id/edit_product_supplier"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_supplier"
                    android:inputType="textCapWords" />
            </LinearLayout>

            <!-- Supplier Email Label -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/EditorTextStyle"
                    android:text="@string/textview_supplier_email" />

                <!-- Supplier Email field -->
                <EditText
                    android:id="@+id/edit_product_supplier_email"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_supplier_email" />
            </LinearLayout>

            <!-- Picture Label -->
            <Button
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:onClick="pic"
                android:text="@string/button_select_picture" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <Button
                android:id="@+id/decrease_quantity_buttos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="decreaseSaleQuantity"
                android:text="@string/button_decrease_quantity" />

            <TextView
                android:id="@+id/text_sale_quantity"
                style="@style/EditorFieldStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/textview_sale_quantity"
                android:textStyle="bold" />

            <Button
                android:id="@+id/increase_quantity_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="increaseSaleQuantity"
                android:text="@string/button_increase_quantity" />

        </LinearLayout>

        <Button
            android:id="@+id/sale_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:onClick="sale"
            android:text="@string/sale_button" />

    </LinearLayout>
</ScrollView>